<resources>
    <string name="app_name">Weather Compare</string>
    <string name="logout_button">Log Out</string>
    <string name="signed_in">Signed in!</string>
    <string name="signed_out">Signed out!</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="firebase_user_fmt">Firebase User: %s</string>
    <string name="title_activity_location">Map</string>
    <string name="logo">logo</string>
    <string name="btncountry">btnCountry</string>
    <string name="btnMap">btnMap</string>
    <string name="currentcity">Current City: %s</string>
    <string name="strError">No cities found</string>
    <string name="no_results">Cannot fetch results</string>
    <string name="no_forecast">No forecast to show</string>
    <string name="temperature">Temperature: %s</string>
    <string name="city">city</string>
    <string name="humedad">Humedad: %s</string>
    <string name="luz">Luz: %s</string>
    <string name="presion">Presion: %s</string>
    <string name="save">Save</string>
    <string name="forecast">forecast</string>
    <string name="temperature2">Temperature: %s C</string>
    <string name="sensors">Sensors:</string>
    <string name="current_data">Current Data:</string>
</resources>