<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/currentcity"
        android:textAllCaps="false"
        android:textColor="#2196F3"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2F03A9F4"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/maxPresion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/presion" />

        <TextView
            android:id="@+id/maxLuz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/luz" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2F03A9F4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/maxHumedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/humedad" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2F03A9F4"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/mainCityResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_results" />
    </ScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:barrierDirection="top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/cityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="16dp"
            android:text="@string/city" />

        <ImageButton
            android:id="@+id/btnCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btncountry"
            android:onClick="getCityByName"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <ImageButton
            android:id="@+id/btnMore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="getForecast"
            app:srcCompat="@android:drawable/ic_menu_more" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/cityResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_results" />
    </ScrollView>

    <Button
        android:id="@+id/logoutButton"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button" />

</LinearLayout>
